# deepseek_ocr_fastapi

./: pyproject.toml
bruno/deepseek-ocr-apis/: basic ocr.bru  bruno.json
